flaskapp/fluentd-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluentd-listener
  labels:
    app: fluentd-listener
spec:
  ports:
  - name: fluentd-tcp
    port: 24224
    protocol: TCP
    targetPort: 24224
  - name: fluentd-udp
    port: 24224
    protocol: UDP
    targetPort: 24224
  selector:
    app: fluentd-listener
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fluentd-listener
  labels:
    app: fluentd-listener
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  template:
    metadata:
      labels:
        app: fluentd-listener
    spec:
      containers:
      - name: fluentd-listener
        image: rocklviv/fluentd
