flaskapp/example.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: example-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      - "*.microservice.rocks"
      - "*.microservice.xyz"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: xx
        privateKey: xx
      hosts:
      - "*.microservice.rocks"
      - "*.microservice.xyz"
