flaskapp/httpbin.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: myingress
  servers:
    - port:
        number: 80
        name: http-all
        protocol: HTTP
      hosts:
      - "*"
